// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitterLayout Render Horizontal SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-testid="Layout"
    style="flex-direction: row; width: 80vw; height: 600px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="horizontal"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="50"
      data-testid="Element"
      style="min-width: 50px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="horizontal"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render SplitterLayout without props and children 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    style="flex-direction: row;"
  />
</DocumentFragment>
`;

exports[`SplitterLayout Render Vertical SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="true"
    data-testid="SplitterLayout"
    style="flex-direction: column; width: 800px; height: 400px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement1"
    >
      <ui5-button
        data-testid="Button"
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      aria-label="Press ARROW keys to move"
      aria-orientation="vertical"
      class="Splitter-splitter"
      data-splitter-vertical="vertical"
      role="separator"
      tabindex="0"
      title="Press ARROW keys to move"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        design="Default"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="300"
      data-testid="SplitterElement2"
      style="min-height: 300px; flex: 0 0 400px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement3"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render Vertical SplitterLayout with only one SplitterElement 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="true"
    data-testid="SplitterLayout"
    style="flex-direction: column; width: 700px; height: 400px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement"
      style="flex: 0 0 200px;"
    >
      <ui5-button
        data-testid="Button"
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;
